tests/errors/parser-errors/atblock/at_block_reserved_id.smark
@_end_@;
body
@_end_@
